--- a/src/main/resources/templates/rental-check.html
+++ b/src/main/resources/templates/rental-check.html
@@ -41,7 +41,7 @@
     </div>
   </div>
     <div style="text-align: center">
-        <a href="/check-in" class="btn btn-primary mt-3">Return to Check-in</a>
+        <a href="/" class="btn btn-primary mt-3">Return to Main</a>
     </div>
 </div>
 </body>
