--- a/src/main/resources/templates/hotel-guests.html
+++ b/src/main/resources/templates/hotel-guests.html
@@ -16,9 +16,12 @@
         <h1>
             <span th:text="${table_caption}" th:remove="tag">title</span>
         </h1>
+        <span style="color: gray;">
+            All guests that was registered in hotel
+        </span>
         <div class="row">
             <div class="col">
-                <div class="input-group mb-3" style="width: 450px">
+                <div class="input-group mb-3" style="width: 450px; padding-top: 10px">
                     <div class="input-group-prepend">
                         <button class="btn btn-info dropdown-toggle" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Options</button>
                         <div class="dropdown-menu">
