--- a/src/main/resources/templates/current-rentals.html
+++ b/src/main/resources/templates/current-rentals.html
@@ -43,7 +43,7 @@
                 <td style="text-align: center">
                     <button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#editRentalModal"
                             th:attr="data-id=${r.id}, data-check-in-date=${r.checkInDate},
-                            data-check-out-date=${r.checkOutDate}">
+                            data-check-out-date=${r.checkOutDate}, data-total-price=${r.totalPrice}">
                         Edit
                     </button>
                 </td>
@@ -102,7 +102,7 @@
                         <button type="reset" class="btn btn-secondary mr-2" data-dismiss="modal" id="closeBtnEdit"
                                 style="width: 150px">Close
                         </button>
-                        <button type="submit" class="btn btn-primary" id='editRental' style="width: 150px">Edit guest
+                        <button type="submit" class="btn btn-primary" id='editRental' style="width: 150px">Edit rental
                         </button>
                     </div>
                     <span id="errorContainer" class="text-danger" style="padding-top: 10px"></span>
@@ -113,6 +113,8 @@
 </div>
 <script>
     let rentalId = null;
+    let oldDate = null;
+    let oldPrice = null;
     $(document).ready(function () {
         $('#editRentalModal').on('show.bs.modal', function (event) {
             console.log('Modal opened');
@@ -120,6 +122,8 @@
             rentalId = button.data('id');
             let checkInDate = button.data('check-in-date');
             let checkOutDate = button.data('check-out-date');
+            oldDate = button.data('check-out-date');
+            oldPrice = button.data('total-price')
 
             const modal = $(this);
             const form = modal.find('form');
@@ -171,7 +175,7 @@
                 $('#editRentalModal').modal('hide');
                 errorContainer.textContent = '';
                 console.log('Edit form submitted successfully')
-                location.href = '/rental/check/' + responseJson['id'];
+                location.href = '/rental/check-update/' + responseJson['id'] + '?oldDate=' + oldDate + '&oldPrice=' + oldPrice;
             }
         } catch (e) {
             console.error('Error submitting form:', e);
