--- a/src/main/resources/templates/hotel-guests.html
+++ b/src/main/resources/templates/hotel-guests.html
@@ -70,10 +70,10 @@
                             data-email=${g.email}, data-phoneNumber=${g.phoneNumber}, data-passport=${g.passport}">
                         Edit
                     </button>
-                    <button type="button" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#myconfirm"
-                            th:attr="data-id=${g.id}">
-                        Delete
-                    </button>
+<!--                    <button type="button" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#myconfirm"-->
+<!--                            th:attr="data-id=${g.id}">-->
+<!--                        Delete-->
+<!--                    </button>-->
                 </td>
             </tr>
             </tbody>
